modify the filtering of categories

--- a/SocialKitchen/user/templates/user/addrecipe.html
+++ b/SocialKitchen/user/templates/user/addrecipe.html
@@ -59,14 +59,22 @@
             </div>
             <div class="form-group">
                 <p>Choose Category: </p>
-                <input type="radio" id="LeanMeat" name="category" value="lean_meat">
-                <label for="LeanMeat">Lean Meat</label><br>
-                <input type="radio" id="WholeGrains" name="category" value="whole_grains">
-                <label for="WholeGrains">Whole Grains</label><br>
-                <input type="radio" id="Vegan" name="category" value="vegan">
-                <label for="Vegan">Vegan</label><br>
-                <input type="radio" id="Dairy" name="category" value="dairy">
-                <label for="Dairy">Dairy</label><br>
+                <input type="radio" id="Meat" name="category" value="meat">
+                <label for="Meat">Meat</label><br>
+                <input type="radio" id="Chicken" name="category" value="chicken">
+                <label for="Chicken">Chicken</label><br>
+                <input type="radio" id="Salads" name="category" value="salads">
+                <label for="Salads">Salads</label><br>
+                <input type="radio" id="SeaFood" name="category" value="seaFood">
+                <label for="SeaFood">Sea Food</label><br>
+                <input type="radio" id=" Drinks" name="category" value=" drinks">
+                <label for=" Drinks"> Drinks</label><br>
+                <input type="radio" id="Soups" name="category" value="soups">
+                <label for="Soups">Soups</label><br>
+                <input type="radio" id="Desserts" name="category" value="desserts">
+                <label for="Desserts">Desserts</label><br>
+                <input type="radio" id="Others" name="category" value="others">
+                <label for="Others">Others</label><br>
             </div>
 
             <div class="mb-4">
