--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -67,10 +67,14 @@
     <div class="dropdown">
         <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded ml-5"><i class="bi bi-tag"></i>Categories</button>
         <div class="dropdown-contentt ml-5">
-          <a href="{% url 'user:LeanMeat' %}">Lean Meat</a>
-          <a href="{% url 'user:WholeGrains' %}">Whole Grains</a>
-          <a href="{% url 'user:Vegan' %}">Vegan</a>
-          <a href="{% url 'user:Dairy' %}">Dairy</a>
+          <a href="{% url 'user:Meat' %}">Meat</a>
+          <a href="{% url 'user:Chicken' %}">Chicken</a>
+          <a href="{% url 'user:Salads' %}">Salads</a>
+          <a href="{% url 'user:SeaFood' %}">Sea Food</a>
+          <a href="{% url 'user:Drinks' %}">Drinks</a>
+          <a href="{% url 'user:Soups' %}">Soups</a>
+          <a href="{% url 'user:Desserts' %}">Desserts</a>
+          <a href="{% url 'user:Others' %}">Others</a>
         </div>
       </div>
 </div>
