Finalizing the designs of the web app

--- a/SocialKitchen/user/templates/user/details.html
+++ b/SocialKitchen/user/templates/user/details.html
@@ -27,7 +27,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
       </head>
        
-      <body style="background-color:lightgrey;">
+      <body style="background-image: url('{% static 'user/images/yy.avif' %}'); background-repeat: no-repeat;  background-size: contain 100%;background-size: auto 100% ;">
        
         <nav id="navbar" class="navbar" style="background-color: white;">
             <ul>
