--- a/SocialKitchen/user/templates/user/filter.html
+++ b/SocialKitchen/user/templates/user/filter.html
@@ -1,4 +1,39 @@
 {% extends 'user/base.html' %}
+{% block navbar %}
+<nav id="navbar" class="navbar">
+    <ul>
+        <a href="home.html" style="text-decoration:none;" class="logo d-flex align-items-center me-auto me-lg-0">
+            <h1>Social Kitchen <span>.</span></h1>
+        </a>
+        <li><a href="/" style="text-decoration:none;">Home</a></li>
+        <li><a class="navbar-brand" href="{% url 'user:createprofile' %}">Create Profile</a></li>
+        <li><a class="navbar-brand" href="{% url 'user:myprofile' %}">My Profile</a></li>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Recipes
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/recipes">All Recipes</a></li>
+                <li><a class="dropdown-item" href="/recipes/add">Add Recipes </a></li>
+                <li>
+                    <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="{% url 'user:mylistings' %}">My Recipes</a></li>
+                <li><a class="dropdown-item" href="{% url 'user:recommendations' %}">Get Recommendations</a></li>
+            </ul>
+        </li>
+    </ul>
+</nav>
+{% endblock %}
+
+
+
+
+
+
+
+
 
 {% load static %}
 
@@ -7,7 +42,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}"> 
 <link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-<body style="background-color: bisque;">
+<body style="background-color: snow;">
     <style>
         a {
           text-decoration: none;
@@ -42,12 +77,6 @@
       </div>
     </div>
 
-<div class="flex justify-center ">
-  <form method="GET" action="{% url 'user:recipes' %}">
-    <input class="btn btn-light" type="text" name="q" placeholder="Search Recipes" value="{{ request.GET.q }}">
-    <button type="submit" class="btn btn-success">Search</button>
-  </form>
-</div>
 
 <div class="grid-container">
     <div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 xl:grid-cols-3 lg:grid-cols-3 gap-5">
