--- a/SocialKitchen/user/templates/user/hislistings.html
+++ b/SocialKitchen/user/templates/user/hislistings.html
@@ -31,7 +31,7 @@
 {% load static %}
 
 {% block content %}
-
+<body style="background-color: snow;">
 <style>
     .card {
         margin-bottom: 30px;
@@ -59,4 +59,5 @@
         {% endfor %}
     </div>
 </div>
+</body>
 {% endblock %}
