--- a/SocialKitchen/user/templates/user/chefprofile.html
+++ b/SocialKitchen/user/templates/user/chefprofile.html
@@ -31,9 +31,11 @@
 
 {% load static %}
 {% block content %}
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,600;1,700&family=Amatic+SC:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Inter:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
-<body style="background-color: silver;">
-<section >
+<link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}"> 
+<body style="background-color: snow;">
+ <section >
   <div class="container py-5 h-100 ">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-10 col-lg-8 col-xl-6">
@@ -57,7 +59,7 @@
                 </div>
                 <div class="d-flex pt-1">
                  <a href="/hislistings/"> <button type="button" class="btn btn-outline-primary me-1 flex-grow-1 mr-3">Recipes</button></a>
-                  <button type="button" class="btn btn-primary flex-grow-1">Follow</button>
+                 
                 </div>
               </div>
             </div>
@@ -67,5 +69,7 @@
     </div>
   </div>
 </section>
-{% endblock %}
+<div class="section-header"> <p> Welcome To My <span> Profile  </span></p>  </div>
+<div class="section-header"> <p> Check Out My <span> Recipes !  </span></p>  </div>
 </body>
+{% endblock %}
