--- a/SocialKitchen/user/templates/user/index.html
+++ b/SocialKitchen/user/templates/user/index.html
@@ -37,7 +37,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'user/main.css' %}"> 
 <link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-<body style="background-image: ;" >
+<body style="background-color:snow" >
     <style>
         a {
           text-decoration: none;
@@ -62,10 +62,10 @@
 <div class="container">
   <form method="GET" action="{% url 'user:recipes' %}">
     <input class="btn btn-light" type="text" name="q" placeholder="Search Recipes" value="{{ request.GET.q }}">
-    <button type="submit" class="btn btn-success">Search</button>
+    <button type="submit" class="btn btn-danger">Search</button>
   </form>
     <div class="dropdown">
-        <button class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded ml-5"><i class="bi bi-tag"></i>Categories</button>
+        <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded ml-5"><i class="bi bi-tag"></i>Categories</button>
         <div class="dropdown-contentt ml-5">
           <a href="{% url 'user:Meat' %}">Meat</a>
           <a href="{% url 'user:Chicken' %}">Chicken</a>
