--- a/SocialKitchen/user/templates/user/myprofile.html
+++ b/SocialKitchen/user/templates/user/myprofile.html
@@ -34,7 +34,7 @@
 <link rel="stylesheet" type="text/css" href="{% static 'user/category.css' %}"> 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
 
-<body >
+<body style="background-color: snow;">
 <div class="grid p-10 grid-cols-1 lg:grid-cols-3 sm:grid-cols-1">
     <div class="rounded shadow-lg">
    
